18374
Does this means nobody uses :sh?  People should be breaking out of repl to a shell or editor all the time, I mean besides by exiting.
```scala
apm@mara:~/projects/snytt$ scala
Welcome to Scala version 2.10.1 (OpenJDK 64-Bit Server VM, Java 1.7.0_21).
Type in expressions to have them evaluated.
Type :help for more information.

scala> :sh /bin/ls
res0: scala.tools.nsc.interpreter.ProcessResult = `/bin/ls` (23 lines, exit 0)

scala> .lines
res1: List[String] = List(build, build.examples.xml, build.number, build.number.maven, build.properties, build.xml, CONTRIBUTING.md, docs, gitconfig.SAMPLE, gitignore.SAMPLE, lib, META-INF, oldhome, PRs, pull-binary-libs.sh, push-binary-libs.sh, README.rst, src, starr.number, test, tools, util, xutil)

scala> :q
apm@mara:~/projects/snytt$ scalam
Welcome to Scala version 2.11.0-M3 (OpenJDK 64-Bit Server VM, Java 1.7.0_21).
Type in expressions to have them evaluated.
Type :help for more information.

scala> :sh /bin/ls
<console>:8: error: object ProcessResult is not a member of package scala.tools.nsc.interpreter
Note: class ProcessResult exists, but it has no companion object.
              scala.tools.nsc.interpreter.ProcessResult("/bin/ls")
                                          ^
```
